<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2026 The LineageOS Project
    SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="dolby_settings"
    android:title="@string/dolby_title">

    <com.android.settingslib.widget.TopIntroPreference
        android:key="dolby_intro"
        android:title="@string/dolby_intro" />

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="dolby_enable"
        android:persistent="false"
        android:title="@string/dolby_enabled" />

    <PreferenceCategory
        android:key="dolby_profiles"
        android:title="@string/dolby_profile">
        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="dolby_profile_music"
            android:persistent="false"
            android:title="@string/dolby_music" />
        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="dolby_profile_dynamic"
            android:persistent="false"
            android:title="@string/dolby_dynamic" />
        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="dolby_profile_movie"
            android:persistent="false"
            android:title="@string/dolby_movie" />
        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="dolby_profile_voice"
            android:persistent="false"
            android:title="@string/dolby_voice" />
        <com.android.settingslib.widget.SelectorWithWidgetPreference
            android:key="dolby_profile_game"
            android:persistent="false"
            android:title="@string/dolby_game" />
    </PreferenceCategory>

    <Preference
        android:key="dolby_status"
        android:selectable="false"
        android:title="@string/dolby_status" />
    <Preference
        android:key="dolby_retry"
        android:title="@string/dolby_retry" />
</PreferenceScreen>
